# devimg

./: .gitignore  .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  devimg.example.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  scorecard.yml
action/: README.md  action.yml
crates/devimg-cli/: Cargo.toml  README.md
crates/devimg-cli/src/: main.rs
crates/devimg-cli/tests/: cli.rs
crates/devimg-core/: Cargo.toml  README.md
crates/devimg-core/src/: ai.rs  budget.rs  check.rs  compare.rs  config.rs  doctor.rs  framework.rs  hash.rs  incremental.rs  lib.rs  manifest.rs  pipeline.rs  plan.rs  quality.rs  report.rs  review.rs  scan.rs  suggest.rs  transform.rs  warnings.rs
docs/: README.md  action.md  agent-contract.md  agents.md  architecture.md  compatibility.md  config.md  public-distribution.md  release.md  roadmap-future.md  roadmap-v0.1.13.md  roadmap-v0.1.14.md  roadmap-v0.2-ai.md  roadmap.md  share-v0.1.13.md  share-v0.1.14.md
examples/: README.md
examples/dogfood/: README.md  devimg.toml
examples/portfolio/: README.md  devimg.toml
examples/workflows/: image-pipeline.yml
fixtures/: README.md
scripts/: package-release.sh  security-checks.sh
skills/devimg-image-pipeline/: SKILL.md
skills/devimg-image-pipeline/agents/: openai.yaml
