[package]
name = "devimg"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Command-line interface for the Dev Image Pipeline"
readme = "README.md"
keywords = ["image", "responsive", "webp", "avif", "ci"]
categories = ["command-line-utilities", "multimedia::images", "web-programming"]

[[bin]]
name = "devimg"
path = "src/main.rs"

[dependencies]
clap = { version = "=4.6.1", features = ["derive"] }
devimg-core = { version = "0.1.15", path = "../devimg-core" }

[dev-dependencies]
serde_json = "1.0.150"
