[package]
name = "devimg-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core image pipeline logic for devimg"
readme = "README.md"
keywords = ["image", "responsive", "webp", "avif", "ci"]
categories = ["multimedia::images", "web-programming"]

[dependencies]
blake3 = "=1.8.2"
globset = "=0.4.16"
image = { version = "0.24.9", default-features = false, features = ["png", "jpeg", "webp"] }
ravif = { version = "=0.13.0", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
toml = "=0.8.23"
walkdir = "2.5.0"
webp = { version = "=0.3.1", default-features = false }
